Moved JVM memory setting defaults to jvm.options.